implemented the FreeMarkerTemplateProcessor

--- a/MobileWeb/mca-webapp/src/main/resources/freemarker.properties
+++ b/MobileWeb/mca-webapp/src/main/resources/freemarker.properties
@@ -1,2 +1,4 @@
 object_wrapper=org.ilrt.mca.freemarker.JenaObjectWrapper
 whitespace_stripping=true
+template_update_delay=0
+localized_lookup=false
