--- a/MobileWeb/mca-services-sparqlendpoint/pom.xml
+++ b/MobileWeb/mca-services-sparqlendpoint/pom.xml
@@ -39,6 +39,12 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.ilrt.mca</groupId>
+            <artifactId>mca-jena-freemarker</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
