--- a/MobileWeb/mca-services-sparqlendpoint/pom.xml
+++ b/MobileWeb/mca-services-sparqlendpoint/pom.xml
@@ -17,6 +17,16 @@
     <name>mca-services-sparqlendpoint (SPARQL Endpoint)</name>
     <url>http://maven.apache.org</url>
 
+        <!-- repositories -->
+    <repositories>
+        <repository>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net Repository for Maven</name>
+            <url>http://download.java.net/maven/2/</url>
+            <layout>default</layout>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.ilrt.mca</groupId>
