--- a/MobileWeb/mca-test-support/pom.xml
+++ b/MobileWeb/mca-test-support/pom.xml
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>com.sun.jersey.jersey-test-framework</groupId>
             <artifactId>jersey-test-framework-grizzly</artifactId>
-            <version>${jersey.version}</version>
+            <version>1.4</version>
         </dependency>
         <dependency>
             <groupId>com.sun.grizzly</groupId>
