--- a/MobileWeb/mca-webapp/src/main/filters/deployment.properties
+++ b/MobileWeb/mca-webapp/src/main/filters/deployment.properties
@@ -1,4 +1,11 @@
 #############################################################
+#                Tomcat connection pooling                  #
+#############################################################
+jniName=jdbc/mca
+jdbcDriver=org.h2.Driver
+jdbcUrl=jdbc:h2:/tmp/mca
+
+#############################################################
 #             Database property details (sdb.ttl)           #
 #############################################################
 sdbName="/tmp/mca"
