--- a/MobileWeb/mca-webapp/src/main/filters/development.properties
+++ b/MobileWeb/mca-webapp/src/main/filters/development.properties
@@ -1,4 +1,11 @@
 #############################################################
+#                Tomcat connection pooling                  #
+#############################################################
+jniName=jdbc/mca
+jdbcDriver=org.h2.Driver
+jdbcUrl=jdbc:h2:target/mca-dev
+
+#############################################################
 #             Database property details (sdb.ttl)           #
 #############################################################
 sdbName="target/mca-dev"
