--- a/MobileWeb/mca-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/MobileWeb/mca-webapp/src/main/webapp/WEB-INF/web.xml
@@ -152,7 +152,7 @@
 
     <resource-ref>
         <description>My DataSource Reference</description>
-        <res-ref-name>jdbc/mca</res-ref-name>
+        <res-ref-name>${jniName}</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
