updated the context.xml to filter docbase. added pool size

--- a/MobileWeb/mca-webapp/src/main/filters/deployment.properties
+++ b/MobileWeb/mca-webapp/src/main/filters/deployment.properties
@@ -1,6 +1,7 @@
 #############################################################
 #                Tomcat connection pooling                  #
 #############################################################
+docBase=MobileWeb
 jniName=jdbc/mca
 jdbcDriver=org.h2.Driver
 jdbcUrl=jdbc:h2:/tmp/mca
