--- a/MobileWeb/mca-webapp/src/main/filters/development.properties
+++ b/MobileWeb/mca-webapp/src/main/filters/development.properties
@@ -1,6 +1,7 @@
 #############################################################
 #                Tomcat connection pooling                  #
 #############################################################
+docBase=ROOT
 jniName=jdbc/mca
 jdbcDriver=org.h2.Driver
 jdbcUrl=jdbc:h2:target/mca-dev
