--- a/MobileWeb/mca-harvester/pom.xml
+++ b/MobileWeb/mca-harvester/pom.xml
@@ -65,6 +65,16 @@
             <version>1.9.18-i</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.sourceforge.htmlcleaner</groupId>
+            <artifactId>htmlcleaner</artifactId>
+            <version>2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 
     <properties>
