--- a/MobileWeb/mca-harvester/pom.xml
+++ b/MobileWeb/mca-harvester/pom.xml
@@ -75,6 +75,11 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>1.6</version>
+        </dependency>
     </dependencies>
 
     <properties>
