--- a/MobileWeb/mca-services-geo/pom.xml
+++ b/MobileWeb/mca-services-geo/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>mca</artifactId>
         <groupId>org.ilrt.mca</groupId>
-        <version>0.7-SNAPSHOT</version>
+        <version>0.7</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
