--- a/MobileWeb/mca-services-ldap/pom.xml
+++ b/MobileWeb/mca-services-ldap/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>mca</artifactId>
         <groupId>org.ilrt.mca</groupId>
-        <version>0.7-SNAPSHOT</version>
+        <version>0.7</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>org.ilrt.mca</groupId>
             <artifactId>mca-common</artifactId>
-            <version>0.7-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
