updated the resources so they use the new navigation system

--- a/MobileWeb/mca-webapp/src/main/resources/feedback.properties
+++ b/MobileWeb/mca-webapp/src/main/resources/feedback.properties
@@ -7,3 +7,7 @@ mail.to=${feedback.mailto}
 
 # the subject title of the email
 mail.subject=Comments received via the feedback form
+
+form.model.label=Feedback
+form.model.style=feedback
+form.model.parentId=mca://registry/
