make sure the resources follow the new navigation model

--- a/MobileWeb/mca-webapp/src/main/resources/ldap.search.properties
+++ b/MobileWeb/mca-webapp/src/main/resources/ldap.search.properties
@@ -20,3 +20,7 @@ personUriPrefix=person://
 
 # Base DN to start searching the server
 baseDN=${baseDN}
+
+form.model.label=Staff Search
+form.model.style=contacts
+form.model.parentId=mca://registry/
