--- a/MobileWeb/pom.xml
+++ b/MobileWeb/pom.xml
@@ -12,6 +12,7 @@
 
     <!-- modules -->
     <modules>
+        <module>build-tools</module>
         <module>mca-test-support</module>
         <module>mca-common</module>
         <module>mca-maven-plugins</module>
@@ -52,6 +53,21 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.1.1</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <configLocation>mca/checkstyle.xml</configLocation>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.ilrt.mca</groupId>
+                        <artifactId>build-tools</artifactId>
+                        <version>1.0</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
 
@@ -63,6 +79,20 @@
             <version>1.2.16</version>
         </dependency>
     </dependencies>
+
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <configLocation>mca/checkstyle.xml</configLocation>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 
     <!-- project information -->
 
