--- a/MobileWeb/mca-common/pom.xml
+++ b/MobileWeb/mca-common/pom.xml
@@ -36,7 +36,13 @@
         <dependency>
             <groupId>com.talis.jena</groupId>
             <artifactId>rdf-json</artifactId>
-            <version>0.2</version>
+            <version>0.8</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.hp.hpl.jena</groupId>
+                    <artifactId>jena</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.freemarker</groupId>
@@ -66,18 +72,8 @@
             <version>${jersey.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.hp.hpl.jena</groupId>
-            <artifactId>jena</artifactId>
-            <version>${jena.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.hp.hpl.jena</groupId>
-            <artifactId>arq</artifactId>
-            <version>${arq.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.hp.hpl.jena</groupId>
-            <artifactId>sdb</artifactId>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-sdb</artifactId>
             <version>${sdb.version}</version>
         </dependency>
         <dependency>
