--- a/MobileWeb/pom.xml
+++ b/MobileWeb/pom.xml
@@ -29,9 +29,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <warName>mca</warName>
-        <jena.version>2.6.3</jena.version>
-        <sdb.version>1.3.2</sdb.version>
-        <arq.version>2.8.5</arq.version>
+        <sdb.version>1.3.4-incubating-SNAPSHOT</sdb.version>
         <h2.version>1.2.145</h2.version>
         <jersey.version>1.9.1</jersey.version>
     </properties>
