fixed side effect of removing the 'registry' path from the configuration files

--- a/MobileWeb/mca-webapp/src/main/resources/feedback.properties
+++ b/MobileWeb/mca-webapp/src/main/resources/feedback.properties
@@ -10,4 +10,4 @@ mail.subject=Comments received via the feedback form
 
 form.model.label=Feedback
 form.model.style=feedback
-form.model.parentId=mca://registry/
+form.model.parentId=${domain}
