--- a/MobileWeb/mca-webapp/pom.xml
+++ b/MobileWeb/mca-webapp/pom.xml
@@ -32,19 +32,21 @@
                         <artifactId>jetty-maven-plugin</artifactId>
                         <version>8.1.3.v20120416</version>
                         <configuration>
-                            <scanIntervalSeconds>10</scanIntervalSeconds>
+                            <!--<scanIntervalSeconds>10</scanIntervalSeconds>-->
                             <webAppConfig>
                                 <contextPath>/</contextPath>
                                 <descriptor>${project.build.directory}/web.xml</descriptor>
                                 <jettyEnvXml>${basedir}/src/test/resources/jetty-env.xml
                                 </jettyEnvXml>
                             </webAppConfig>
+                            <!--
                             <scanTargets>
                                 <scanTarget>${basedir}/src/main/webapp/images/</scanTarget>
                                 <scanTarget>${basedir}/src/main/webapp/js/</scanTarget>
                                 <scanTarget>${basedir}/src/main/webapp/style/</scanTarget>
                                 <scanTarget>${basedir}/src/main/webapp/WEB-INF/templates/</scanTarget>
                             </scanTargets>
+                            -->
                             <systemProperties>
                                 <systemProperty>
                                     <name>net.sf.ehcache.disabled</name>
@@ -212,6 +214,11 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-servlet</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.ilrt.mca</groupId>
             <artifactId>mca-test-support</artifactId>
