--- a/MobileWeb/mca-maven-plugins/data-maven-plugin/pom.xml
+++ b/MobileWeb/mca-maven-plugins/data-maven-plugin/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>mca-maven-plugins</artifactId>
         <groupId>org.ilrt.mca.plugins</groupId>
-        <version>0.9</version>
+        <version>0.10-SNAPSHOT</version>
     </parent>
     <groupId>org.ilrt.mca.plugins</groupId>
     <artifactId>data-maven-plugin</artifactId>
