--- a/MobileWeb/mca-maven-plugins/pom.xml
+++ b/MobileWeb/mca-maven-plugins/pom.xml
@@ -4,7 +4,7 @@
    <parent>
         <artifactId>mca</artifactId>
         <groupId>org.ilrt.mca</groupId>
-        <version>0.10</version>
+        <version>0.11-GITHUB-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
