--- a/MobileWeb/mca-webapp/pom.xml
+++ b/MobileWeb/mca-webapp/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>mca</artifactId>
         <groupId>org.ilrt.mca</groupId>
-        <version>0.10</version>
+        <version>0.11-GITHUB-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
