--- a/MobileWeb/mca-webapp/src/main/filters/development.properties
+++ b/MobileWeb/mca-webapp/src/main/filters/development.properties
@@ -44,3 +44,6 @@ server.protocol=SSL
 #############################################################
 search=(|(cn={0}*)(sn={0}*))
 baseDN=cn=Users,dc=bris,dc=ac,dc=uk
+
+
+domain=http://localhost:8080
