--- a/MobileWeb/mca-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/MobileWeb/mca-webapp/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
-         xmlns:xml="http://www.w3.org/XML/1998/namespace"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
                              http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
@@ -26,6 +25,12 @@
         <param-value>${sparqlEnabled}</param-value>
     </context-param>
 
+    <context-param>
+        <description>The domain name the application is deployed.</description>
+        <param-name>domain</param-name>
+        <param-value>${domain}</param-value>
+    </context-param>
+
     <!-- SERVLETS -->
 
     <servlet>
@@ -42,6 +47,11 @@
             <description>Location of config file of local data sources.</description>
             <param-name>dataLocation</param-name>
             <param-value>/data-manifest.txt</param-value>
+        </init-param>
+        <init-param>
+            <description>The domain name the application is deployed.</description>
+            <param-name>domain</param-name>
+            <param-value>${domain}</param-value>
         </init-param>
         <load-on-startup>0</load-on-startup>
     </servlet>
@@ -86,7 +96,7 @@
     <!-- FILTERS -->
 
     <filter>
-        <filter-name>NavigationFilter</filter-name>
+        <filter-name>LongCacheLifeFilter</filter-name>
         <filter-class>org.ilrt.mca.cache.SimpleCachingAcceptHeadersPageCachingFilter</filter-class>
         <init-param>
             <param-name>suppressStackTraces</param-name>
@@ -94,7 +104,33 @@
         </init-param>
         <init-param>
             <param-name>cacheName</param-name>
-            <param-value>NavigationFilter</param-value>
+            <param-value>LongCacheLifeFilter</param-value>
+        </init-param>
+    </filter>
+
+    <filter>
+        <filter-name>MediumCacheLifeFilter</filter-name>
+        <filter-class>org.ilrt.mca.cache.SimpleCachingAcceptHeadersPageCachingFilter</filter-class>
+        <init-param>
+            <param-name>suppressStackTraces</param-name>
+            <param-value>false</param-value>
+        </init-param>
+        <init-param>
+            <param-name>cacheName</param-name>
+            <param-value>MediumCacheLifeFilter</param-value>
+        </init-param>
+    </filter>
+
+    <filter>
+        <filter-name>ShortCacheLifeFilter</filter-name>
+        <filter-class>org.ilrt.mca.cache.SimpleCachingAcceptHeadersPageCachingFilter</filter-class>
+        <init-param>
+            <param-name>suppressStackTraces</param-name>
+            <param-value>false</param-value>
+        </init-param>
+        <init-param>
+            <param-name>cacheName</param-name>
+            <param-value>ShortCacheLifeFilter</param-value>
         </init-param>
     </filter>
 
@@ -115,7 +151,8 @@
         </init-param>
         <init-param>
             <param-name>com.sun.jersey.config.property.WebPageContentRegex</param-name>
-            <param-value>/(style|images|js)/.*|/robots.txt|/favicon.ico|/apple-touch-icon.png|/busproxy/*|/directoryproxy/*
+            <param-value>
+                /(style|images|js)/.*|/robots.txt|/favicon.ico|/apple-touch-icon.png|/busproxy/*|/directoryproxy/*
             </param-value>
         </init-param>
     </filter>
@@ -130,7 +167,7 @@
     <!-- FILTER MAPPINGS -->
 
     <filter-mapping>
-        <filter-name>NavigationFilter</filter-name>
+        <filter-name>LongCacheLifeFilter</filter-name>
         <url-pattern>/</url-pattern>
         <url-pattern>/today/</url-pattern>
         <url-pattern>/maps/</url-pattern>
